<resources>
    <string name="app_name">DiaryApp</string>

    // text home screen
    <string name="search_home">Search something</string>
    <string name="hint_info_user">Your information</string>
    <string name="add_diary">Add diary</string>

    //text page diary screen
    <string name="create">Create</string>
    <string name="title_hint">What has you been up to ?</string>
    <string name="content_hint">detailed description what up to you</string>
</resources>