<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@drawable/bg_main">

    <RelativeLayout
        android:id="@+id/rlToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_menu_black"
            />

        <ImageView
            android:id="@+id/icHelp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_help"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:fontFamily="@font/hind_kochi_semi_bold"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:hint="@string/search_home"
            android:textColor="@color/black"
            android:textSize="26dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlInfoUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_bonder"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rlToolBar">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/user" />

        <View
            android:layout_width="1dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="95dp"
            android:background="@drawable/bg_line_ver" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginStart="100dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_info_user" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/srvDiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/rlInfoUser">

        <RelativeLayout
            android:id="@+id/rlDiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDiary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvAddDiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_btn_home"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/add_diary"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>