<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main">

    <RelativeLayout
        android:id="@+id/rlToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:text="@string/create"
            android:layout_centerVertical="true"
            android:textSize="26sp"
            android:fontFamily="@font/hind_kochi_semi_bold"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/icSave"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_save"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_page_diary"
        android:layout_below="@+id/rlToolBar">

        <LinearLayout
            android:id="@+id/lnCalendar"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/icCalendar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_calendar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/hindkochi_regular"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:text="14/02/2000"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnMood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnCalendar"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/icMoodGood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:src="@drawable/good"/>

            <ImageView
                android:id="@+id/icMoodRad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:src="@drawable/rad"/>

            <ImageView
                android:id="@+id/icMoodMeh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:src="@drawable/meh"/>

            <ImageView
                android:id="@+id/icMoodBad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:src="@drawable/bad"/>

            <ImageView
                android:id="@+id/icMoodAwful"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:src="@drawable/awful"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlMood"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_page_diary">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@null"
            android:fontFamily="@font/hindkochi_regular"
            android:gravity="center"
            android:hint="@string/title_hint"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/etTitle"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/black"
            android:background="@drawable/bg_line_ver" />

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etTitle"
            android:layout_marginTop="25sp"
            android:background="@null"
            android:fontFamily="@font/hindkochi_regular"
            android:gravity="center"
            android:hint="@string/content_hint"
            android:textColor="@color/black" />
    </RelativeLayout>


</RelativeLayout>